fix(header-profile): fix vertical alignment

--- a/src/app/features/shared/components/header-profile/header-profile.component.scss
+++ b/src/app/features/shared/components/header-profile/header-profile.component.scss
@@ -104,7 +104,7 @@
       text-decoration: none;
       user-select: none;
       transition: 0.3s ease-in-out;
-      border-left: 0 solid transparent;
+      border-left: 2px solid transparent;
 
       &:hover {
         background-color: $background-2;
@@ -116,11 +116,12 @@
       }
 
       i {
+        display: flex;
+        align-items: center;
         margin-right: 8px;
         color: $secondary-dark-1;
         font-size: 18px;
-        transform: translate(0, 33%);
-        transition: 0.3s;
+        transition: 0.3s ease-in-out;
       }
 
       &:hover i {
@@ -129,12 +130,12 @@
       }
 
       p {
+        display: flex;
+        align-items: center;
         color: $primary-dark;
         font-size: 12px;
         letter-spacing: 0.1px;
-        margin-bottom: 3px;
         font-weight: 500;
-        transform: translate(0, 30%);
       }
     }
   }
